Cyr Kerning update

--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -7640,9 +7640,12 @@ kerningLTR = {
 "@MMK_R_V.right" = -40;
 "@MMK_R_Y.right" = -60;
 "@MMK_R_Zhe-cy" = 10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_hardsign-cy" = -5;
 "@MMK_R_j.sc" = 40;
 "@MMK_R_quote.right" = -70;
 "@MMK_R_t.sc" = -40;
+"@MMK_R_te-cy" = -20;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -30;
 J = 50;
@@ -7651,6 +7654,8 @@ v.sc = -20;
 };
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -10;
+"@MMK_R_el-cy" = -5;
+"@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
 "@MMK_R_zhe-cy" = -10;
 };
@@ -7686,13 +7691,15 @@ v.sc = -20;
 "@MMK_R_U-cy" = 15;
 "@MMK_R_Ze-cy" = 35;
 "@MMK_R_Zhe-cy" = 5;
-"@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 30;
+"@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
+"@MMK_R_ha-cy" = 15;
+"@MMK_R_ia-cy" = 10;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_period.right" = 30;
-"@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 80;
+"@MMK_R_v.right" = 20;
+"@MMK_R_ze-cy" = 10;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -8201,11 +8208,18 @@ germandbls.sc = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_b.sc" = -20;
 "@MMK_R_c.sc" = -60;
+"@MMK_R_che-cy" = -40;
+"@MMK_R_de-cy" = -50;
+"@MMK_R_el-cy" = -50;
 "@MMK_R_g.right" = -70;
 "@MMK_R_guillemetleft" = -60;
 "@MMK_R_guillemetright" = -30;
+"@MMK_R_ha-cy" = -20;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_hyphen.right" = -40;
+"@MMK_R_ia-cy" = -50;
 "@MMK_R_n.right" = -50;
+"@MMK_R_o-cy" = -70;
 "@MMK_R_o.right" = -70;
 "@MMK_R_period.right" = -60;
 "@MMK_R_s.right" = -60;
@@ -8217,6 +8231,7 @@ germandbls.sc = -20;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -40;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -50;
 ampersand = -20;
 germandbls.sc = -40;
 question = 20;
@@ -8370,11 +8385,11 @@ v.sc = -10;
 "@MMK_R_De-cy" = -10;
 "@MMK_R_Ia-cy" = 10;
 "@MMK_R_U-cy" = 15;
-"@MMK_R_che-cy" = -15;
-"@MMK_R_ia-cy" = -10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -5;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
-"@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_A.right" = 10;
@@ -8391,12 +8406,15 @@ v.sc = -10;
 "@MMK_R_be-cy" = -20;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -10;
+"@MMK_R_de-cy" = 10;
 "@MMK_R_eight" = -10;
 "@MMK_R_four" = -30;
 "@MMK_R_guillemetleft" = -20;
 "@MMK_R_hyphen.right" = -10;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_nine" = -10;
+"@MMK_R_o-cy" = -5;
+"@MMK_R_o.right" = -5;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -15;
 "@MMK_R_te-cy" = -10;
@@ -8798,6 +8816,7 @@ guilsinglleft.sc = -30;
 "@MMK_R_four" = -20;
 "@MMK_R_hardsign-cy" = 10;
 "@MMK_R_hyphen.right" = -20;
+"@MMK_R_ia-cy" = -5;
 "@MMK_R_o-cy" = -10;
 "@MMK_R_o.right" = -10;
 "@MMK_R_period.right" = -40;
@@ -9087,9 +9106,12 @@ guilsinglleft.sc = -10;
 "@MMK_R_V.right" = -40;
 "@MMK_R_Y.right" = -60;
 "@MMK_R_Zhe-cy" = 5;
+"@MMK_R_che-cy" = -20;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_j.sc" = 40;
 "@MMK_R_quote.right" = -70;
 "@MMK_R_t.sc" = -40;
+"@MMK_R_te-cy" = -20;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -30;
 J = 50;
@@ -9098,6 +9120,8 @@ v.sc = -20;
 };
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -5;
+"@MMK_R_el-cy" = -5;
+"@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
 "@MMK_R_zhe-cy" = -10;
 };
@@ -9133,13 +9157,15 @@ v.sc = -20;
 "@MMK_R_U-cy" = 15;
 "@MMK_R_Ze-cy" = 30;
 "@MMK_R_Zhe-cy" = 5;
-"@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 30;
+"@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
+"@MMK_R_ha-cy" = 15;
+"@MMK_R_ia-cy" = 10;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_period.right" = 30;
-"@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 80;
+"@MMK_R_v.right" = 15;
+"@MMK_R_ze-cy" = 10;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -9649,11 +9675,18 @@ germandbls.sc = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_b.sc" = -20;
 "@MMK_R_c.sc" = -60;
+"@MMK_R_che-cy" = -35;
+"@MMK_R_de-cy" = -50;
+"@MMK_R_el-cy" = -50;
 "@MMK_R_g.right" = -70;
 "@MMK_R_guillemetleft" = -60;
 "@MMK_R_guillemetright" = -30;
+"@MMK_R_ha-cy" = -20;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_hyphen.right" = -40;
+"@MMK_R_ia-cy" = -60;
 "@MMK_R_n.right" = -50;
+"@MMK_R_o-cy" = -70;
 "@MMK_R_o.right" = -70;
 "@MMK_R_period.right" = -60;
 "@MMK_R_s.right" = -60;
@@ -9665,6 +9698,7 @@ germandbls.sc = -20;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -40;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -50;
 ampersand = -20;
 germandbls.sc = -40;
 question = 20;
@@ -9820,11 +9854,10 @@ v.sc = -10;
 "@MMK_R_Paren.right" = -25;
 "@MMK_R_U-cy" = 7;
 "@MMK_R_Zhe-cy" = -7;
-"@MMK_R_che-cy" = -15;
-"@MMK_R_ia-cy" = -10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_de-cy" = -5;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
-"@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_A.right" = 5;
@@ -9841,12 +9874,15 @@ v.sc = -10;
 "@MMK_R_be-cy" = -20;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -10;
+"@MMK_R_de-cy" = 10;
 "@MMK_R_eight" = -10;
 "@MMK_R_four" = -30;
 "@MMK_R_guillemetleft" = -20;
 "@MMK_R_hyphen.right" = -10;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_nine" = -10;
+"@MMK_R_o-cy" = -15;
+"@MMK_R_o.right" = -15;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -15;
 "@MMK_R_te-cy" = -10;
@@ -10541,9 +10577,12 @@ guilsinglleft.sc = -10;
 "@MMK_R_V.right" = -40;
 "@MMK_R_Y.right" = -60;
 "@MMK_R_Zhe-cy" = 5;
+"@MMK_R_che-cy" = -30;
+"@MMK_R_hardsign-cy" = -20;
 "@MMK_R_j.sc" = 40;
 "@MMK_R_quote.right" = -70;
 "@MMK_R_t.sc" = -40;
+"@MMK_R_te-cy" = -30;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -30;
 J = 50;
@@ -10554,7 +10593,12 @@ v.sc = -20;
 "@MMK_R_Che-cy" = -10;
 "@MMK_R_El-cy" = -10;
 "@MMK_R_Hardsign-cy.right" = -20;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -5;
+"@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
+"@MMK_R_v.right" = -10;
+"@MMK_R_ze-cy" = -10;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_C.left" = {
@@ -10587,8 +10631,10 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 15;
 "@MMK_R_Zhe-cy" = 5;
 "@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 30;
+"@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
+"@MMK_R_ha-cy" = 10;
+"@MMK_R_hardsign-cy" = -20;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_period.right" = 30;
 "@MMK_R_te-cy" = -10;
@@ -11054,6 +11100,7 @@ v.sc = -60;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.sc" = -10;
 "@MMK_R_ae.sc" = -20;
+"@MMK_R_de-cy" = -5;
 "@MMK_R_period.right" = -40;
 X = -20;
 };
@@ -11099,11 +11146,17 @@ germandbls.sc = -20;
 "@MMK_R_ae.sc" = -90;
 "@MMK_R_b.sc" = -20;
 "@MMK_R_c.sc" = -60;
+"@MMK_R_che-cy" = -25;
+"@MMK_R_de-cy" = -30;
+"@MMK_R_el-cy" = -50;
 "@MMK_R_g.right" = -70;
 "@MMK_R_guillemetleft" = -60;
 "@MMK_R_guillemetright" = -30;
+"@MMK_R_ha-cy" = -20;
 "@MMK_R_hyphen.right" = -40;
+"@MMK_R_ia-cy" = -55;
 "@MMK_R_n.right" = -50;
+"@MMK_R_o-cy" = -70;
 "@MMK_R_o.right" = -70;
 "@MMK_R_period.right" = -60;
 "@MMK_R_s.right" = -60;
@@ -11115,6 +11168,7 @@ germandbls.sc = -20;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -40;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -40;
 ampersand = -20;
 germandbls.sc = -40;
 question = 20;
@@ -11269,11 +11323,14 @@ v.sc = -10;
 "@MMK_R_Ha-cy.right" = -25;
 "@MMK_R_U-cy" = 5;
 "@MMK_R_Zhe-cy" = -5;
-"@MMK_R_che-cy" = -15;
-"@MMK_R_ia-cy" = -10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -10;
+"@MMK_R_ia-cy" = -5;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
-"@MMK_R_zhe-cy" = -10;
+"@MMK_R_ze-cy" = -10;
+"@MMK_R_zhe-cy" = -5;
 };
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_A.right" = 5;
@@ -11294,9 +11351,12 @@ v.sc = -10;
 "@MMK_R_hyphen.right" = -10;
 "@MMK_R_komizje-cy" = -20;
 "@MMK_R_nine" = -10;
+"@MMK_R_o-cy" = -20;
+"@MMK_R_o.right" = -20;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -15;
 "@MMK_R_te-cy" = -10;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zero" = -15;
 };
 "@MMK_L_Zhedescender-cy" = {
@@ -11533,6 +11593,7 @@ v.sc = -40;
 "@MMK_R_el-cy" = -5;
 "@MMK_R_ha-cy" = -25;
 "@MMK_R_hardsign-cy" = -5;
+"@MMK_R_ia-cy" = -5;
 "@MMK_R_te-cy" = -10;
 "@MMK_R_ze-cy" = -10;
 "@MMK_R_zhe-cy" = -20;
@@ -11551,6 +11612,8 @@ v.sc = -40;
 "@MMK_R_te-cy" = -5;
 "@MMK_R_v.right" = -20;
 "@MMK_R_z.right" = -10;
+"@MMK_R_ze-cy" = -5;
+"@MMK_R_zhe-cy" = -20;
 };
 "@MMK_L_omega-cy" = {
 "@MMK_R_de-cy" = -20;
@@ -11993,10 +12056,13 @@ guilsinglleft.sc = -10;
 "@MMK_R_V.right" = -4;
 "@MMK_R_Y.right" = -16;
 "@MMK_R_Zhe-cy" = 10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_hardsign-cy" = -5;
 "@MMK_R_j.sc" = 30;
 "@MMK_R_quote.right" = -47;
 "@MMK_R_s.sc" = 10;
 "@MMK_R_t.sc" = -20;
+"@MMK_R_te-cy" = -5;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -20;
 J = 30;
@@ -12012,7 +12078,10 @@ v.sc = -20;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
+"@MMK_R_te-cy" = -20;
 "@MMK_R_two" = -10;
+"@MMK_R_v.right" = -5;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_C.left" = {
@@ -12048,12 +12117,13 @@ v.sc = -20;
 "@MMK_R_U-cy" = 15;
 "@MMK_R_Ze-cy" = 7;
 "@MMK_R_Zhe-cy" = 10;
-"@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 10;
-"@MMK_R_el-cy" = 10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_de-cy" = 30;
+"@MMK_R_el-cy" = 25;
+"@MMK_R_ha-cy" = 15;
 "@MMK_R_komizje-cy" = -12;
-"@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 50;
+"@MMK_R_ze-cy" = 10;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -12560,11 +12630,18 @@ germandbls.sc = -10;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_b.sc" = -10;
 "@MMK_R_c.sc" = -30;
+"@MMK_R_che-cy" = -30;
+"@MMK_R_de-cy" = -45;
+"@MMK_R_el-cy" = -40;
 "@MMK_R_g.right" = -42;
 "@MMK_R_guillemetleft" = -36;
 "@MMK_R_guillemetright" = -18;
+"@MMK_R_ha-cy" = -12;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_hyphen.right" = -24;
+"@MMK_R_ia-cy" = -45;
 "@MMK_R_n.right" = -30;
+"@MMK_R_o-cy" = -42;
 "@MMK_R_o.right" = -42;
 "@MMK_R_period.right" = -36;
 "@MMK_R_s.right" = -36;
@@ -12576,6 +12653,7 @@ germandbls.sc = -10;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -24;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -40;
 ampersand = -12;
 germandbls.sc = -10;
 question = 12;
@@ -12718,13 +12796,11 @@ tbar.sc = -10;
 "@MMK_R_Ha-cy.right" = -5;
 "@MMK_R_Ia-cy" = 25;
 "@MMK_R_U-cy" = 10;
-"@MMK_R_che-cy" = -6;
 "@MMK_R_colon" = -10;
-"@MMK_R_ia-cy" = -5;
+"@MMK_R_de-cy" = -5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
-"@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_A.right" = 10;
@@ -12741,12 +12817,16 @@ tbar.sc = -10;
 "@MMK_R_Ze-cy" = 5;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_che-cy" = -12;
+"@MMK_R_de-cy" = 10;
 "@MMK_R_eight" = -10;
 "@MMK_R_four" = -20;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_nine" = -5;
+"@MMK_R_o-cy" = -10;
+"@MMK_R_o.right" = -10;
 "@MMK_R_six" = -15;
+"@MMK_R_te-cy" = -5;
 "@MMK_R_yi-cy" = 10;
 "@MMK_R_zero" = -15;
 };
@@ -13433,10 +13513,13 @@ guilsinglleft.sc = -6;
 "@MMK_R_V.right" = -4;
 "@MMK_R_Y.right" = -16;
 "@MMK_R_Zhe-cy" = 5;
+"@MMK_R_che-cy" = -15;
+"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_j.sc" = 30;
 "@MMK_R_quote.right" = -47;
 "@MMK_R_s.sc" = 10;
 "@MMK_R_t.sc" = -20;
+"@MMK_R_te-cy" = -5;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -20;
 J = 30;
@@ -13450,7 +13533,10 @@ v.sc = -20;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
+"@MMK_R_te-cy" = -20;
 "@MMK_R_two" = -10;
+"@MMK_R_v.right" = -5;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_C.left" = {
@@ -13486,12 +13572,13 @@ v.sc = -20;
 "@MMK_R_U-cy" = 25;
 "@MMK_R_Ze-cy" = 20;
 "@MMK_R_Zhe-cy" = 10;
-"@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 10;
-"@MMK_R_el-cy" = 10;
+"@MMK_R_che-cy" = -5;
+"@MMK_R_de-cy" = 30;
+"@MMK_R_el-cy" = 30;
+"@MMK_R_ha-cy" = 15;
 "@MMK_R_komizje-cy" = -12;
-"@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 50;
+"@MMK_R_ze-cy" = 10;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -13996,11 +14083,18 @@ germandbls.sc = -10;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_b.sc" = -10;
 "@MMK_R_c.sc" = -30;
+"@MMK_R_che-cy" = -20;
+"@MMK_R_de-cy" = -45;
+"@MMK_R_el-cy" = -40;
 "@MMK_R_g.right" = -42;
 "@MMK_R_guillemetleft" = -36;
 "@MMK_R_guillemetright" = -18;
+"@MMK_R_ha-cy" = -12;
+"@MMK_R_hardsign-cy" = -20;
 "@MMK_R_hyphen.right" = -24;
+"@MMK_R_ia-cy" = -40;
 "@MMK_R_n.right" = -30;
+"@MMK_R_o-cy" = -42;
 "@MMK_R_o.right" = -42;
 "@MMK_R_period.right" = -36;
 "@MMK_R_s.right" = -36;
@@ -14012,6 +14106,7 @@ germandbls.sc = -10;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -24;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -40;
 ampersand = -12;
 germandbls.sc = -10;
 question = 12;
@@ -14153,13 +14248,11 @@ tbar.sc = -10;
 "@MMK_R_El-cy" = -5;
 "@MMK_R_Ha-cy.right" = -5;
 "@MMK_R_U-cy" = -5;
-"@MMK_R_che-cy" = -6;
 "@MMK_R_colon" = -10;
-"@MMK_R_ia-cy" = -5;
+"@MMK_R_de-cy" = -5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
-"@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_A.right" = 5;
@@ -14176,13 +14269,16 @@ tbar.sc = -10;
 "@MMK_R_Ze-cy" = 7;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_che-cy" = -12;
+"@MMK_R_de-cy" = 10;
 "@MMK_R_eight" = -10;
 "@MMK_R_four" = -20;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_nine" = -5;
 "@MMK_R_six" = -15;
+"@MMK_R_te-cy" = -5;
 "@MMK_R_yi-cy" = 10;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zero" = -15;
 };
 "@MMK_L_Zhedescender-cy" = {
@@ -14430,6 +14526,7 @@ v.sc = -34;
 "@MMK_R_te-cy" = -5;
 "@MMK_R_v.right" = -12;
 "@MMK_R_z.right" = -1;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zhe-cy" = -5;
 };
 "@MMK_L_omega-cy" = {
@@ -14864,10 +14961,13 @@ guilsinglleft.sc = -6;
 "@MMK_R_T.right" = -17;
 "@MMK_R_V.right" = -4;
 "@MMK_R_Y.right" = -16;
+"@MMK_R_che-cy" = -25;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_j.sc" = 30;
 "@MMK_R_quote.right" = -47;
 "@MMK_R_s.sc" = 10;
 "@MMK_R_t.sc" = -20;
+"@MMK_R_te-cy" = -10;
 "@MMK_R_w.sc" = -10;
 "@MMK_R_y.sc" = -20;
 J = 30;
@@ -14880,10 +14980,15 @@ v.sc = -20;
 "@MMK_R_Hardsign-cy.right" = -15;
 "@MMK_R_Ze-cy" = -5;
 "@MMK_R_colon" = -20;
+"@MMK_R_de-cy" = -10;
+"@MMK_R_el-cy" = -15;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
+"@MMK_R_te-cy" = -20;
 "@MMK_R_two" = -10;
+"@MMK_R_v.right" = -20;
+"@MMK_R_ze-cy" = -10;
 "@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_C.left" = {
@@ -14920,11 +15025,14 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 10;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_che-cy" = -20;
-"@MMK_R_de-cy" = 10;
-"@MMK_R_el-cy" = 10;
+"@MMK_R_de-cy" = 30;
+"@MMK_R_el-cy" = 30;
+"@MMK_R_ha-cy" = 10;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 50;
+"@MMK_R_v.right" = -10;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -15382,6 +15490,7 @@ v.sc = -30;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.sc" = -10;
 "@MMK_R_ae.sc" = -20;
+"@MMK_R_de-cy" = -5;
 "@MMK_R_period.right" = -24;
 X = -2;
 x.sc = -10;
@@ -15429,11 +15538,17 @@ germandbls.sc = -10;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_b.sc" = -10;
 "@MMK_R_c.sc" = -30;
+"@MMK_R_che-cy" = -10;
+"@MMK_R_de-cy" = -45;
+"@MMK_R_el-cy" = -40;
 "@MMK_R_g.right" = -42;
 "@MMK_R_guillemetleft" = -36;
 "@MMK_R_guillemetright" = -18;
+"@MMK_R_ha-cy" = -12;
 "@MMK_R_hyphen.right" = -24;
+"@MMK_R_ia-cy" = -40;
 "@MMK_R_n.right" = -30;
+"@MMK_R_o-cy" = -45;
 "@MMK_R_o.right" = -42;
 "@MMK_R_period.right" = -36;
 "@MMK_R_s.right" = -36;
@@ -15445,6 +15560,7 @@ germandbls.sc = -10;
 "@MMK_R_y.sc" = -20;
 "@MMK_R_z.right" = -24;
 "@MMK_R_z.sc" = -20;
+"@MMK_R_ze-cy" = -40;
 ampersand = -12;
 germandbls.sc = -10;
 question = 12;
@@ -15589,12 +15705,16 @@ tbar.sc = -10;
 "@MMK_R_Hardsign-cy.right" = -5;
 "@MMK_R_U-cy" = -10;
 "@MMK_R_Zhe-cy" = -5;
+"@MMK_R_be-cy" = -5;
 "@MMK_R_che-cy" = -6;
 "@MMK_R_colon" = -10;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -10;
 "@MMK_R_ia-cy" = -5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_seven" = -10;
 "@MMK_R_two" = -15;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zhe-cy" = -6;
 };
 "@MMK_L_Zhe-cy" = {
@@ -15616,7 +15736,10 @@ tbar.sc = -10;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_nine" = -5;
+"@MMK_R_o-cy" = -10;
+"@MMK_R_o.right" = -10;
 "@MMK_R_six" = -15;
+"@MMK_R_te-cy" = -5;
 "@MMK_R_yi-cy" = 10;
 "@MMK_R_zero" = -15;
 };
@@ -15867,6 +15990,7 @@ v.sc = -34;
 "@MMK_R_te-cy" = -5;
 "@MMK_R_v.right" = -12;
 "@MMK_R_z.right" = -1;
+"@MMK_R_ze-cy" = -5;
 "@MMK_R_zhe-cy" = -15;
 };
 "@MMK_L_omega-cy" = {
