CYR Kerning update Noto Sans Upright

--- a/sources/NotoSans.glyphspackage/fontinfo.plist
+++ b/sources/NotoSans.glyphspackage/fontinfo.plist
@@ -7655,6 +7655,7 @@ v.sc = -20;
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -10;
 "@MMK_R_el-cy" = -5;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
 "@MMK_R_zhe-cy" = -10;
@@ -7667,6 +7668,8 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 15;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = -10;
+"@MMK_R_de-cy" = 15;
 "@MMK_R_guillemetleft" = -20;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w.sc" = -20;
@@ -7691,6 +7694,7 @@ v.sc = -20;
 "@MMK_R_U-cy" = 15;
 "@MMK_R_Ze-cy" = 35;
 "@MMK_R_Zhe-cy" = 5;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_ha-cy" = 15;
@@ -7700,6 +7704,7 @@ v.sc = -20;
 "@MMK_R_underscore" = 80;
 "@MMK_R_v.right" = 20;
 "@MMK_R_ze-cy" = 10;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -8183,8 +8188,13 @@ X = 50;
 "@MMK_R_Z.right" = -10;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
+"@MMK_R_che-cy" = 15;
+"@MMK_R_de-cy" = -20;
+"@MMK_R_el-cy" = -40;
 "@MMK_R_guillemetleft" = -20;
+"@MMK_R_hardsign-cy" = 10;
 "@MMK_R_period.right" = -130;
+"@MMK_R_te-cy" = 20;
 X = -20;
 ampersand = -10;
 germandbls.sc = -20;
@@ -8254,6 +8264,7 @@ x.sc = -30;
 "@MMK_R_Lje-cy" = -50;
 "@MMK_R_O.right" = -10;
 "@MMK_R_Ze-cy" = 10;
+"@MMK_R_a.right" = -35;
 "@MMK_R_be-cy" = -40;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_cheabkhasian-cy" = -30;
@@ -8268,8 +8279,11 @@ x.sc = -30;
 "@MMK_R_guillemetright" = -20;
 "@MMK_R_hyphen.right" = -20;
 "@MMK_R_ia-cy" = -50;
+"@MMK_R_n.right" = -25;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -70;
+"@MMK_R_o-cy" = -35;
+"@MMK_R_o.right" = -35;
+"@MMK_R_period.right" = -100;
 "@MMK_R_question" = 20;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -10;
@@ -8479,6 +8493,7 @@ question = 80;
 "@MMK_R_El-cy" = 20;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_che-cy" = -5;
+"@MMK_R_colon" = 35;
 "@MMK_R_de-cy" = 20;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_period.right" = 20;
@@ -8487,6 +8502,7 @@ question = 80;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_underscore" = 80;
 "@MMK_R_v.right" = 10;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_Je-cy" = 40;
@@ -8602,7 +8618,9 @@ X = -20;
 "@MMK_R_T.right" = -40;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
+"@MMK_R_che-cy" = 10;
 "@MMK_R_te-cy" = -20;
+"@MMK_R_v.right" = 10;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_iaccent" = {
@@ -8746,6 +8764,7 @@ v.sc = -40;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 20;
 "@MMK_R_Y.right" = 10;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -50;
@@ -8811,6 +8830,7 @@ guilsinglleft.sc = -30;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.right" = -10;
 "@MMK_R_che-cy" = 15;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = -40;
 "@MMK_R_el-cy" = -30;
 "@MMK_R_four" = -20;
@@ -9079,6 +9099,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -10;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 60;
 J = 95;
 };
 v.sc = {
@@ -9121,6 +9143,7 @@ v.sc = -20;
 "@MMK_L_Be-cy" = {
 "@MMK_R_Che-cy" = -5;
 "@MMK_R_el-cy" = -5;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
 "@MMK_R_zhe-cy" = -10;
@@ -9133,6 +9156,8 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 20;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = -10;
+"@MMK_R_de-cy" = 5;
 "@MMK_R_guillemetleft" = -20;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w.sc" = -20;
@@ -9157,6 +9182,7 @@ v.sc = -20;
 "@MMK_R_U-cy" = 15;
 "@MMK_R_Ze-cy" = 30;
 "@MMK_R_Zhe-cy" = 5;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_ha-cy" = 15;
@@ -9166,6 +9192,7 @@ v.sc = -20;
 "@MMK_R_underscore" = 80;
 "@MMK_R_v.right" = 15;
 "@MMK_R_ze-cy" = 10;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -9650,8 +9677,13 @@ X = 50;
 "@MMK_R_Z.right" = -10;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
+"@MMK_R_che-cy" = 15;
+"@MMK_R_de-cy" = -20;
+"@MMK_R_el-cy" = -35;
 "@MMK_R_guillemetleft" = -20;
+"@MMK_R_hardsign-cy" = 20;
 "@MMK_R_period.right" = -130;
+"@MMK_R_te-cy" = 25;
 X = -20;
 ampersand = -10;
 germandbls.sc = -20;
@@ -9720,6 +9752,7 @@ x.sc = -30;
 "@MMK_R_Komide-cy" = -70;
 "@MMK_R_Lje-cy" = -50;
 "@MMK_R_Ze-cy" = 15;
+"@MMK_R_a.right" = -35;
 "@MMK_R_be-cy" = -40;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_cheabkhasian-cy" = -30;
@@ -9734,8 +9767,11 @@ x.sc = -30;
 "@MMK_R_guillemetright" = -20;
 "@MMK_R_hyphen.right" = -20;
 "@MMK_R_ia-cy" = -50;
+"@MMK_R_n.right" = -25;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -70;
+"@MMK_R_o-cy" = -35;
+"@MMK_R_o.right" = -35;
+"@MMK_R_period.right" = -90;
 "@MMK_R_question" = 20;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -10;
@@ -9947,6 +9983,7 @@ question = 80;
 "@MMK_R_El-cy" = 20;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 40;
 "@MMK_R_de-cy" = 20;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_period.right" = 20;
@@ -9955,6 +9992,7 @@ question = 80;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_underscore" = 80;
 "@MMK_R_v.right" = 10;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_Je-cy" = 40;
@@ -10070,7 +10108,9 @@ X = -20;
 "@MMK_R_T.right" = -40;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
+"@MMK_R_che-cy" = 10;
 "@MMK_R_te-cy" = -20;
+"@MMK_R_v.right" = 10;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_iaccent" = {
@@ -10214,6 +10254,7 @@ v.sc = -40;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 20;
 "@MMK_R_Y.right" = 10;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -50;
@@ -10279,6 +10320,7 @@ guilsinglleft.sc = -30;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.right" = -10;
 "@MMK_R_che-cy" = 15;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = -40;
 "@MMK_R_el-cy" = -30;
 "@MMK_R_four" = -20;
@@ -10551,6 +10593,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -10;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 60;
 J = 95;
 };
 v.sc = {
@@ -10595,6 +10639,7 @@ v.sc = -20;
 "@MMK_R_Hardsign-cy.right" = -20;
 "@MMK_R_de-cy" = -5;
 "@MMK_R_el-cy" = -5;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_two" = -10;
 "@MMK_R_v.right" = -10;
@@ -10607,6 +10652,8 @@ v.sc = -20;
 "@MMK_R_O.right" = -20;
 "@MMK_R_Zhe-cy" = 5;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = -10;
+"@MMK_R_de-cy" = 5;
 "@MMK_R_guillemetleft" = -20;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w.sc" = -20;
@@ -10631,6 +10678,7 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 15;
 "@MMK_R_Zhe-cy" = 5;
 "@MMK_R_che-cy" = -20;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = 40;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_ha-cy" = 10;
@@ -10639,6 +10687,7 @@ v.sc = -20;
 "@MMK_R_period.right" = 30;
 "@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 80;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -11100,7 +11149,7 @@ v.sc = -60;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.sc" = -10;
 "@MMK_R_ae.sc" = -20;
-"@MMK_R_de-cy" = -5;
+"@MMK_R_de-cy" = -7;
 "@MMK_R_period.right" = -40;
 X = -20;
 };
@@ -11122,8 +11171,13 @@ X = 50;
 "@MMK_R_Z.right" = -10;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
+"@MMK_R_che-cy" = 15;
+"@MMK_R_de-cy" = -20;
+"@MMK_R_el-cy" = -35;
 "@MMK_R_guillemetleft" = -20;
+"@MMK_R_hardsign-cy" = 20;
 "@MMK_R_period.right" = -130;
+"@MMK_R_te-cy" = 15;
 X = -20;
 ampersand = -10;
 germandbls.sc = -20;
@@ -11191,6 +11245,7 @@ x.sc = -30;
 "@MMK_R_Lje-cy" = -50;
 "@MMK_R_O.right" = -10;
 "@MMK_R_Ze-cy" = 5;
+"@MMK_R_a.right" = -35;
 "@MMK_R_be-cy" = -40;
 "@MMK_R_che-cy" = -20;
 "@MMK_R_cheabkhasian-cy" = -30;
@@ -11205,8 +11260,11 @@ x.sc = -30;
 "@MMK_R_guillemetright" = -20;
 "@MMK_R_hyphen.right" = -20;
 "@MMK_R_ia-cy" = -50;
+"@MMK_R_n.right" = -25;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -70;
+"@MMK_R_o-cy" = -45;
+"@MMK_R_o.right" = -45;
+"@MMK_R_period.right" = -100;
 "@MMK_R_question" = 20;
 "@MMK_R_quote.right" = 20;
 "@MMK_R_six" = -10;
@@ -11420,6 +11478,7 @@ question = 80;
 "@MMK_R_El-cy" = 20;
 "@MMK_R_Je-cy" = 100;
 "@MMK_R_che-cy" = -20;
+"@MMK_R_colon" = 35;
 "@MMK_R_de-cy" = 30;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_period.right" = 20;
@@ -11427,6 +11486,7 @@ question = 80;
 "@MMK_R_seven" = -30;
 "@MMK_R_te-cy" = -15;
 "@MMK_R_underscore" = 80;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_Je-cy" = 40;
@@ -11542,7 +11602,9 @@ X = -20;
 "@MMK_R_T.right" = -40;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
+"@MMK_R_che-cy" = 5;
 "@MMK_R_te-cy" = -20;
+"@MMK_R_v.right" = 10;
 "@MMK_R_zhe-cy" = -10;
 };
 "@MMK_L_iaccent" = {
@@ -11689,6 +11751,7 @@ v.sc = -40;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 20;
 "@MMK_R_Y.right" = 10;
+"@MMK_R_Ze-cy" = 15;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a.right" = -40;
 "@MMK_R_a.sc" = -50;
@@ -11754,6 +11817,7 @@ guilsinglleft.sc = -30;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a.right" = -10;
 "@MMK_R_che-cy" = 15;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = -40;
 "@MMK_R_el-cy" = -30;
 "@MMK_R_four" = -20;
@@ -12029,6 +12093,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -10;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 60;
 J = 95;
 };
 v.sc = {
@@ -12075,6 +12141,7 @@ v.sc = -20;
 "@MMK_R_Hardsign-cy.right" = -10;
 "@MMK_R_Ze-cy" = -5;
 "@MMK_R_colon" = -20;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -12092,6 +12159,8 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 10;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = -15;
+"@MMK_R_de-cy" = 10;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_u.sc" = -10;
@@ -12118,12 +12187,14 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 7;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_che-cy" = -5;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = 30;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_ha-cy" = 15;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_underscore" = 50;
 "@MMK_R_ze-cy" = 10;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -12606,8 +12677,13 @@ X = 30;
 "@MMK_R_Z.right" = -6;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -60;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -15;
 "@MMK_R_guillemetleft" = -12;
+"@MMK_R_hardsign-cy" = 25;
 "@MMK_R_period.right" = -78;
+"@MMK_R_te-cy" = 25;
 X = -12;
 ampersand = -6;
 germandbls.sc = -10;
@@ -12675,6 +12751,7 @@ x.sc = -20;
 "@MMK_R_Komide-cy" = -22;
 "@MMK_R_Lje-cy" = -30;
 "@MMK_R_Ze-cy" = 15;
+"@MMK_R_a.right" = -25;
 "@MMK_R_be-cy" = -30;
 "@MMK_R_che-cy" = -12;
 "@MMK_R_cheabkhasian-cy" = -18;
@@ -12686,8 +12763,11 @@ x.sc = -20;
 "@MMK_R_guillemetleft" = -30;
 "@MMK_R_guillemetright" = -12;
 "@MMK_R_ia-cy" = -46;
+"@MMK_R_n.right" = -25;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -46;
+"@MMK_R_o-cy" = -30;
+"@MMK_R_o.right" = -30;
+"@MMK_R_period.right" = -70;
 "@MMK_R_question" = 10;
 "@MMK_R_six" = -10;
 "@MMK_R_ze-cy" = -16;
@@ -12878,6 +12958,7 @@ question = 58;
 "@MMK_R_Che-cy" = -10;
 "@MMK_R_De-cy" = 10;
 "@MMK_R_Je-cy" = 55;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = 20;
 "@MMK_R_el-cy" = 10;
 "@MMK_R_period.right" = 20;
@@ -12885,6 +12966,7 @@ question = 58;
 "@MMK_R_seven" = -30;
 "@MMK_R_te-cy" = -6;
 "@MMK_R_underscore" = 50;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_komizje-cy" = -12;
@@ -13006,9 +13088,11 @@ X = -12;
 "@MMK_R_El-cy" = -10;
 "@MMK_R_GRK_Tau" = -24;
 "@MMK_R_T.right" = -24;
+"@MMK_R_che-cy" = 10;
 "@MMK_R_de-cy" = -10;
 "@MMK_R_el-cy" = -10;
 "@MMK_R_te-cy" = -12;
+"@MMK_R_v.right" = 5;
 };
 "@MMK_L_iaccent" = {
 "@MMK_R_Paren.right" = 30;
@@ -13110,6 +13194,7 @@ j = 24;
 "@MMK_R_Ustraight-cy" = -36;
 "@MMK_R_V.right" = -36;
 "@MMK_R_Y.right" = -36;
+"@MMK_R_Zhe-cy" = 10;
 "@MMK_R_c.sc" = -20;
 "@MMK_R_che-cy" = -36;
 "@MMK_R_komizje-cy" = -30;
@@ -13147,6 +13232,7 @@ v.sc = -30;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 12;
 "@MMK_R_Y.right" = 6;
+"@MMK_R_Ze-cy" = 15;
 "@MMK_R_a.right" = -24;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_abreve-cy" = -22;
@@ -13208,6 +13294,7 @@ guilsinglleft.sc = -18;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_a.right" = -10;
 "@MMK_R_che-cy" = 10;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = -17;
 "@MMK_R_el-cy" = -17;
 "@MMK_R_four" = -20;
@@ -13486,6 +13573,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -6;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 60;
 J = 65;
 };
 v.sc = {
@@ -13530,6 +13619,7 @@ v.sc = -20;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_Hardsign-cy.right" = -10;
 "@MMK_R_colon" = -20;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -13547,6 +13637,8 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 10;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = -15;
+"@MMK_R_de-cy" = 5;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_u.sc" = -10;
@@ -13573,12 +13665,14 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 20;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_che-cy" = -5;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = 30;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_ha-cy" = 15;
 "@MMK_R_komizje-cy" = -12;
 "@MMK_R_underscore" = 50;
 "@MMK_R_ze-cy" = 10;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -14058,8 +14152,13 @@ X = 30;
 "@MMK_R_Z.right" = -6;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -60;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_de-cy" = -5;
+"@MMK_R_el-cy" = -15;
 "@MMK_R_guillemetleft" = -12;
+"@MMK_R_hardsign-cy" = 25;
 "@MMK_R_period.right" = -78;
+"@MMK_R_te-cy" = 25;
 X = -12;
 ampersand = -6;
 germandbls.sc = -10;
@@ -14128,6 +14227,7 @@ x.sc = -20;
 "@MMK_R_Komide-cy" = -22;
 "@MMK_R_Lje-cy" = -30;
 "@MMK_R_Ze-cy" = 5;
+"@MMK_R_a.right" = -25;
 "@MMK_R_be-cy" = -30;
 "@MMK_R_che-cy" = -12;
 "@MMK_R_cheabkhasian-cy" = -18;
@@ -14139,8 +14239,11 @@ x.sc = -20;
 "@MMK_R_guillemetleft" = -30;
 "@MMK_R_guillemetright" = -12;
 "@MMK_R_ia-cy" = -46;
+"@MMK_R_n.right" = -20;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -46;
+"@MMK_R_o-cy" = -30;
+"@MMK_R_o.right" = -27;
+"@MMK_R_period.right" = -50;
 "@MMK_R_question" = 10;
 "@MMK_R_six" = -10;
 "@MMK_R_ze-cy" = -16;
@@ -14330,6 +14433,7 @@ question = 58;
 "@MMK_R_De-cy" = 10;
 "@MMK_R_Je-cy" = 55;
 "@MMK_R_che-cy" = -5;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = 25;
 "@MMK_R_el-cy" = 10;
 "@MMK_R_period.right" = 20;
@@ -14337,6 +14441,7 @@ question = 58;
 "@MMK_R_seven" = -30;
 "@MMK_R_te-cy" = -6;
 "@MMK_R_underscore" = 50;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_komizje-cy" = -12;
@@ -14458,9 +14563,11 @@ X = -12;
 "@MMK_R_El-cy" = -10;
 "@MMK_R_GRK_Tau" = -24;
 "@MMK_R_T.right" = -24;
+"@MMK_R_che-cy" = 10;
 "@MMK_R_de-cy" = -10;
 "@MMK_R_el-cy" = -10;
 "@MMK_R_te-cy" = -12;
+"@MMK_R_v.right" = 10;
 };
 "@MMK_L_iaccent" = {
 "@MMK_R_Paren.right" = 30;
@@ -14563,6 +14670,7 @@ j = 24;
 "@MMK_R_Ustraight-cy" = -36;
 "@MMK_R_V.right" = -36;
 "@MMK_R_Y.right" = -36;
+"@MMK_R_Zhe-cy" = 10;
 "@MMK_R_c.sc" = -20;
 "@MMK_R_che-cy" = -36;
 "@MMK_R_komizje-cy" = -30;
@@ -14600,6 +14708,7 @@ v.sc = -30;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 12;
 "@MMK_R_Y.right" = 6;
+"@MMK_R_Ze-cy" = 20;
 "@MMK_R_a.right" = -24;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_abreve-cy" = -22;
@@ -14661,6 +14770,7 @@ guilsinglleft.sc = -18;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_a.right" = -5;
 "@MMK_R_che-cy" = 10;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = -17;
 "@MMK_R_el-cy" = -17;
 "@MMK_R_four" = -20;
@@ -14936,6 +15046,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -6;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 62;
 J = 65;
 };
 v.sc = {
@@ -14982,6 +15094,7 @@ v.sc = -20;
 "@MMK_R_colon" = -20;
 "@MMK_R_de-cy" = -10;
 "@MMK_R_el-cy" = -15;
+"@MMK_R_hyphen.right" = 5;
 "@MMK_R_period.right" = -20;
 "@MMK_R_quote.right" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -14998,6 +15111,8 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 5;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = -15;
+"@MMK_R_de-cy" = 5;
 "@MMK_R_guillemetleft" = -12;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_u.sc" = -10;
@@ -15025,14 +15140,17 @@ v.sc = -20;
 "@MMK_R_Ze-cy" = 10;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_che-cy" = -20;
+"@MMK_R_colon" = 20;
 "@MMK_R_de-cy" = 30;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_ha-cy" = 10;
 "@MMK_R_hardsign-cy" = -15;
 "@MMK_R_komizje-cy" = -12;
+"@MMK_R_period.right" = 10;
 "@MMK_R_te-cy" = -10;
 "@MMK_R_underscore" = 50;
 "@MMK_R_v.right" = -10;
+underscore = 50;
 };
 "@MMK_L_Dje-cy" = {
 "@MMK_R_Che-cy" = -14;
@@ -15513,8 +15631,13 @@ X = 30;
 "@MMK_R_Z.right" = -6;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -60;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_de-cy" = -20;
+"@MMK_R_el-cy" = -25;
 "@MMK_R_guillemetleft" = -12;
+"@MMK_R_hardsign-cy" = 25;
 "@MMK_R_period.right" = -78;
+"@MMK_R_te-cy" = 15;
 X = -12;
 ampersand = -6;
 germandbls.sc = -10;
@@ -15582,6 +15705,7 @@ x.sc = -20;
 "@MMK_R_Komide-cy" = -22;
 "@MMK_R_Lje-cy" = -30;
 "@MMK_R_O.right" = -20;
+"@MMK_R_a.right" = -30;
 "@MMK_R_be-cy" = -30;
 "@MMK_R_che-cy" = -12;
 "@MMK_R_cheabkhasian-cy" = -18;
@@ -15593,8 +15717,11 @@ x.sc = -20;
 "@MMK_R_guillemetleft" = -30;
 "@MMK_R_guillemetright" = -12;
 "@MMK_R_ia-cy" = -46;
+"@MMK_R_n.right" = -20;
 "@MMK_R_nine" = -10;
-"@MMK_R_period.right" = -46;
+"@MMK_R_o-cy" = -40;
+"@MMK_R_o.right" = -40;
+"@MMK_R_period.right" = -50;
 "@MMK_R_question" = 10;
 "@MMK_R_six" = -10;
 "@MMK_R_ze-cy" = -16;
@@ -15794,6 +15921,7 @@ question = 58;
 "@MMK_R_Je-cy" = 60;
 "@MMK_R_Paren.right" = 20;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 35;
 "@MMK_R_de-cy" = 30;
 "@MMK_R_el-cy" = 10;
 "@MMK_R_period.right" = 20;
@@ -15801,6 +15929,7 @@ question = 58;
 "@MMK_R_seven" = -30;
 "@MMK_R_te-cy" = -6;
 "@MMK_R_underscore" = 50;
+underscore = 50;
 };
 "@MMK_L_dje-cy" = {
 "@MMK_R_komizje-cy" = -12;
@@ -15920,6 +16049,7 @@ X = -12;
 "@MMK_R_El-cy" = -10;
 "@MMK_R_GRK_Tau" = -24;
 "@MMK_R_T.right" = -24;
+"@MMK_R_che-cy" = 15;
 "@MMK_R_de-cy" = -10;
 "@MMK_R_el-cy" = -10;
 "@MMK_R_te-cy" = -12;
@@ -16066,6 +16196,7 @@ v.sc = -30;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_V.right" = 12;
 "@MMK_R_Y.right" = 6;
+"@MMK_R_Ze-cy" = 15;
 "@MMK_R_a.right" = -24;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_abreve-cy" = -22;
@@ -16127,6 +16258,7 @@ guilsinglleft.sc = -18;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_a.right" = -10;
 "@MMK_R_che-cy" = 10;
+"@MMK_R_colon" = 30;
 "@MMK_R_de-cy" = -17;
 "@MMK_R_el-cy" = -17;
 "@MMK_R_four" = -20;
@@ -16403,6 +16535,8 @@ thorn.sc = {
 "@MMK_R_y.sc" = -6;
 };
 underscore = {
+"@MMK_R_De-cy" = 60;
+"@MMK_R_de-cy" = 60;
 J = 65;
 };
 v.sc = {
