--- a/sources/config-serif.yaml
+++ b/sources/config-serif.yaml
@@ -3,6 +3,7 @@ category:
 - SERIF
 familyName: Noto Serif
 googleFonts: true
+recipeProvider: noto
 sources:
 - NotoSerif.glyphspackage
 - NotoSerif-Italic.glyphspackage
